# flask-typed

./: LICENSE  README.md  pyproject.toml
flask_typed/: __init__.py  annotations.py  docs_utils.py  errors.py  handler.py  parameter.py  parsers.py  response.py  typed_api.py  typed_resource.py  validation.py  validators.py
flask_typed/docs/: responses.py  utils.py
tests/: conftest.py  test_errors.py  test_openapi_docs.py  test_validation.py
tests/docs/: test_docs_simple_user.py
tests/test_data/: jobs.py  simple_user.py  todo_resource.py
tests/validation/: test_validation.py
